<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_normal"
    android:backgroundTint="@color/light_grey"
    android:paddingTop="40dp"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <org.jxxy.debug.corekit.widget.CommonToolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:titleText="设置"
        app:if_back="true"
        android:id="@+id/cTool"
        app:layout_constraintTop_toTopOf="parent">
    </org.jxxy.debug.corekit.widget.CommonToolbar>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/light_grey"
                android:text="@string/setting_tile_1">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:text="@string/setting_content_1">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:text="@string/setting_content_2">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/light_grey"
                android:text="@string/setting_tile_2">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:text="@string/setting_content_3">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:text="@string/setting_content_4">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:text="@string/setting_content_5">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:text="@string/setting_content_6">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/light_grey"
                android:text="@string/setting_tile_3">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:text="@string/setting_content_7">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:text="@string/setting_content_8">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:text="@string/setting_content_9">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/light_grey"
                android:text="@string/setting_tile_4">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:text="@string/setting_content_10">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:text="@string/setting_content_11">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:text="@string/setting_content_12">
            </TextView>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="登出"
                android:textColor="@color/white"
                android:layout_margin="60dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/color1"
                android:id="@+id/loginOutBtn">
            </Button>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>




</LinearLayout>