<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_100"
        app:layoutDescription="@xml/member_header"
        android:id="@+id/motionLayout"
        xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/bgTV"
        android:alpha="0.8"
        android:background="@drawable/frament_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/memberRecycleView">
    </ImageView>
    <ImageView
        android:id="@+id/userPhotoIV"
        android:layout_width="60dp"
        android:layout_height="60dp"
      />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/atv"
        android:textColor="@color/dark_grey"
        android:alpha="0"
        android:textSize="@dimen/title_text_size">
    </TextView>
    <org.jxxy.debug.corekit.widget.IconFont
        android:id="@+id/settingIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:text="@string/setting"
        android:textColor="@color/primary_100"
        android:textSize="@dimen/mid_icon_size"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </org.jxxy.debug.corekit.widget.IconFont>
    <TextView
        android:id="@+id/userNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="4dp"
        android:textSize="@dimen/num_text_size"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/userPhotoIV"
        app:layout_constraintTop_toTopOf="@id/userPhotoIV">
    </TextView>
    <TextView
        android:id="@+id/userDescribeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="36dp"
        android:ellipsize="end"
        android:textSize="@dimen/mid_text_size"
        android:textStyle="italic"
        app:layout_constraintLeft_toRightOf="@id/userPhotoIV"
        app:layout_constraintTop_toTopOf="@id/userNameTV"
        app:layout_constraintBottom_toBottomOf="@id/userPhotoIV">
    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/point"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
       android:paddingTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/userDescribeTV">
        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/pointView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/transparent"
            >
        </View>
        <org.jxxy.debug.corekit.widget.IconFont
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.33"
            android:layout_height="wrap_content"
            android:text="@string/addPoint"
            android:textColor="@color/primary_100"
            android:textSize="@dimen/mid_icon_size"
            android:id="@+id/point_icon_2"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/pointView"
            app:layout_constraintLeft_toLeftOf="@id/pointView"
            app:layout_constraintRight_toRightOf="@id/pointView"
            android:layout_marginTop="6dp"
            >
        </org.jxxy.debug.corekit.widget.IconFont>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/userTodayPointTV"
            android:textSize="@dimen/Big_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/point_icon_2"
            app:layout_constraintBottom_toBottomOf="@id/point_text_2">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/point_text_2"
            android:textSize="@dimen/small_text_size"
            android:text="今日积分"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="@id/pointView"
            >
        </TextView>
        <org.jxxy.debug.corekit.widget.IconFont
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.33"
            android:layout_height="wrap_content"
            android:text="@string/sumPoint"
            android:textColor="@color/primary_100"
            android:textSize="@dimen/mid_icon_size"
            android:id="@+id/point_icon_1"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/pointView"
            app:layout_constraintLeft_toLeftOf="@id/pointView"
            app:layout_constraintRight_toLeftOf="@id/point_icon_2"
            android:layout_marginTop="6dp"
            >
        </org.jxxy.debug.corekit.widget.IconFont>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/userSumPointTV"
            android:textSize="@dimen/Big_text_size"
            app:layout_constraintLeft_toLeftOf="@id/point_icon_1"
            app:layout_constraintRight_toRightOf="@id/point_icon_1"
            app:layout_constraintTop_toTopOf="@id/point_icon_1"
            app:layout_constraintBottom_toBottomOf="@id/point_text_1">
        </TextView>

        <TextView
            android:id="@+id/point_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_text_size"
            android:text="总积分"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="@id/pointView"
            app:layout_constraintLeft_toLeftOf="@id/point_icon_1"
            app:layout_constraintRight_toRightOf="@id/point_icon_1">
        </TextView>
        <org.jxxy.debug.corekit.widget.IconFont
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.33"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            android:textColor="@color/primary_100"
            android:textSize="@dimen/mid_icon_size"
            android:id="@+id/point_icon_3"
            android:gravity="center"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toTopOf="@id/pointView"
            app:layout_constraintRight_toRightOf="@id/pointView"
            app:layout_constraintLeft_toRightOf="@id/point_icon_2"
            >
        </org.jxxy.debug.corekit.widget.IconFont>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/userDaysTV"
            android:textSize="@dimen/Big_text_size"
            app:layout_constraintLeft_toLeftOf="@id/point_icon_3"
            app:layout_constraintRight_toRightOf="@id/point_icon_3"
            app:layout_constraintTop_toTopOf="@id/point_icon_3"
            app:layout_constraintBottom_toBottomOf="@id/point_text_3">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="连续天数"
            android:id="@+id/point_text_3"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintLeft_toLeftOf="@id/point_icon_3"
            app:layout_constraintRight_toRightOf="@id/point_icon_3"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="@id/pointView"
            >
        </TextView>
        <View
            android:layout_width="1dp"
            android:layout_height="76dp"
            android:background="@color/bg_300"
            android:id="@+id/pointLeftView"
            app:layout_constraintLeft_toRightOf="@id/point_icon_1"
            app:layout_constraintTop_toTopOf="@id/pointView"
            android:layout_marginTop="12dp"
            app:layout_constraintRight_toLeftOf="@id/point_icon_2">
        </View>
        <View
            android:layout_width="1dp"
            android:layout_height="76dp"
            android:id="@+id/pointRightView"
            android:background="@color/bg_300"
            app:layout_constraintTop_toTopOf="@id/pointView"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toRightOf="@id/point_icon_2"
            app:layout_constraintRight_toLeftOf="@id/point_icon_3">
        </View>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <cn.yonghui.hyd.main.ui.cms.activities.seckillactivities.widget.nested.NestedParentRecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/point"
        android:background="@color/bg_100"
        android:id="@+id/memberRecycleView"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        >
    </cn.yonghui.hyd.main.ui.cms.activities.seckillactivities.widget.nested.NestedParentRecyclerView>
</androidx.constraintlayout.motion.widget.MotionLayout>